# Hofwerks

./: .gitignore  PRD.md  README.md  bts.jsonc  package.json  turbo.json
apps/mobile/: components.json  index.html  package.json  vite.config.ts
apps/mobile/src/: App.tsx  index.css  main.tsx  types.ts
apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/src/: lib.rs  main.rs
apps/mobile/src/components/: app-top-cards.tsx  logo.tsx  sign-up-form.tsx
apps/mobile/src/lib/: auth-client.ts
apps/mobile/src/screens/: AccountScreen.tsx  CodingScreen.tsx  DataloggingScreen.tsx  FlashTuneScreen.tsx  GaugesScreen.tsx  HomeScreen.tsx  LoginScreen.tsx  ReadCodesScreen.tsx  SignUpScreen.tsx  SplashScreen.tsx  VehicleInfoScreen.tsx
apps/native/: index.html  package.json  vite.config.ts
apps/native/src/: App.tsx  index.css  main.tsx  types.ts
apps/native/src-tauri/: Cargo.toml  tauri.conf.json
apps/native/src-tauri/config/: bmw_channels.json
apps/native/src-tauri/src/: lib.rs  main.rs
apps/native/src/components/: app-top-cards.tsx  login-form.tsx  logo.tsx  sign-up-form.tsx
apps/native/src/lib/: auth-client.ts  convex-client.ts
apps/native/src/screens/: DatalogViewerScreen.tsx  DataloggingScreen.tsx  FlashTuneScreen.tsx  GaugesScreen.tsx  LoginScreen.tsx  ReadCodesScreen.tsx  SignUpScreen.tsx
apps/web/: components.json  package.json  vite.config.ts
apps/web/src/: index.css  routeTree.gen.ts
apps/web/src/components/: logo.tsx  (+2 more)
convex/: README.md  http.ts  logs.ts
convex/_generated/: api.d.ts
convex/betterAuth/: auth.ts
(+38 files in other folders)
