[package]
name = "hofwerkz_mobile"
version = "0.1.0"
edition = "2021"
description = "Hofwerkz iOS app"

[lib]
name = "hofwerkz_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_os = "ios"))'.dependencies]
serialport = "4"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"

[profile.dev]
debug = 0

[profile.dev.package."*"]
debug = 0
