[package]
name = "hofwerkz_native"
version = "0.1.0"
edition = "2021"
description = "Hofwerkz desktop app"

[lib]
name = "hofwerkz_native_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"

[profile.dev]
debug = 0

[profile.dev.package."*"]
debug = 0
